fix: tune mobile hero glow alignment

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -298,14 +298,14 @@
 
   .bgGlow {
     top: 50%;
-    left: 44%;
-    width: 70%;
+    left: 41%;
+    width: 65%;
   }
 
   .bgPulse {
     top: 50%;
-    left: 44%;
-    width: 45%;
+    left: 41%;
+    width: 40%;
   }
 }
 
